// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders body with partial within layout 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" /> 
</head>

<body>
   <nav>
   Navigation
</nav> <section>
   <h4>Don't eat bugs</h4></section> <footer>
   Footer
</footer>
</body>

</html>"
`;

exports[`renders data 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" /> 
</head>

<body>
   <nav>
   Navigation
</nav> <h1>Mockery</h1>
<ol>
   <li>one</li>
   <li>two</li>
   <li>three</li>
</ol> <footer>
   Footer
</footer>
</body>

</html>"
`;

exports[`renders data within layout 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" /> 
</head>

<body>
   <nav>
   Navigation
</nav> <h1>Mockery</h1>
<ol>
   <li>one</li>
   <li>two</li>
   <li>three</li>
</ol> <footer>
   Footer
</footer>
</body>

</html>"
`;

exports[`renders within default layout 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" />    <meta name=\\"content-for\\" />

</head>

<body>
   <nav>
   Navigation
</nav> 
<article>
   <h1>Home</h1>
</article> <footer>
   Footer
</footer>
</body>

</html>"
`;

exports[`renders within specified layout 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" />    <meta name=\\"content-for\\" />

</head>

<body>
   <nav>
   Navigation
</nav> 
<article>
   <h1>Home</h1>
</article> <footer>
   Footer
</footer> Other layout
</body>

</html>"
`;

exports[`renders without layout 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

<head>
   <meta value=\\"something\\" />    <meta name=\\"content-for\\" />

</head>

<body>
   <nav>
   Navigation
</nav> 
<article>
   <h1>Home</h1>
</article> <footer>
   Footer
</footer>
</body>

</html>"
`;
